@startuml

title 12.2. Document lifecycle and delete policy hardening

hide circle
skinparam linetype ortho

entity Order
entity Purchase
entity InventoryDocument
entity Payment
entity ProductionOrder
entity InventoryDocumentLine
entity StockMovement
entity StockReservation
entity OrderHistory
entity StatusHistory

class DocumentDeletionPolicy <<service>>
class ReferenceArchivePolicy <<service>>
class DeletePolicyTestSuite <<tests>>

DocumentDeletionPolicy --> Order
DocumentDeletionPolicy --> Purchase
DocumentDeletionPolicy --> InventoryDocument
DocumentDeletionPolicy --> Payment
DocumentDeletionPolicy --> ProductionOrder
DocumentDeletionPolicy --> InventoryDocumentLine
DocumentDeletionPolicy --> StockMovement
DocumentDeletionPolicy --> StockReservation
DocumentDeletionPolicy --> OrderHistory
DocumentDeletionPolicy --> StatusHistory
ReferenceArchivePolicy --> Unit
ReferenceArchivePolicy --> Product
ReferenceArchivePolicy --> Customer
ReferenceArchivePolicy --> Supplier
ReferenceArchivePolicy --> Warehouse
ReferenceArchivePolicy --> InventoryReason
DeletePolicyTestSuite --> DocumentDeletionPolicy
DeletePolicyTestSuite --> ReferenceArchivePolicy

note right of DocumentDeletionPolicy
  Implemented:
  - App\Service\Lifecycle\DocumentDeletionPolicy centralizes
    hard-delete checks for business documents and history records.
  - Posted/canceled InventoryDocument records, stock movements,
    reservations, payments, OrderHistory and StatusHistory are blocked.
  - Draft InventoryDocument / InventoryDocumentLine cleanup is allowed
    only while there are no stock movements or status history.
  - Order, Purchase and ProductionOrder hard delete is limited to
    draft records with no linked payments, inventory documents or history.

  Required behavior:
  - Posted/canceled documents, payments, movements, reservations,
    OrderHistory and StatusHistory are append-only/read-only records.
  - Draft-only hard delete is allowed only for entities that have no
    posted movements, payments, status history or business impact.
  - Reference data uses status=inactive/deletedAt when it may appear
    in historical documents.
end note

note right of ReferenceArchivePolicy
  Implemented:
  - App\Service\Lifecycle\ReferenceArchivePolicy centralizes
    reference archive behavior.
  - Product, Category, Unit, Warehouse, Customer, Supplier and
    InventoryReason use status=inactive and deletedAt.
  - ProductPrice is closed with validTo instead of hard delete.
  - Customer/Supplier/Unit/InventoryReason admin actions now show
    archive messaging instead of destructive-delete wording.
end note

note bottom
  Verification target:
  - tests/Service/Lifecycle/DocumentDeletionPolicyTest.php
  - tests/Service/Lifecycle/ReferenceArchivePolicyTest.php
  - lint:container
  - lint:twig templates
  - doctrine:schema:validate --skip-sync
end note

@enduml
